--- a/assets/css/goods.less
+++ b/assets/css/goods.less
@@ -201,6 +201,13 @@
         padding: 8px 12px;
       }
     }
+    &.disabled {
+      .image {
+        img {
+          .opacity(.4);
+        }
+      }
+    }
   }
   &.full {
     display: table;
@@ -390,5 +397,62 @@
         }
       }
     }      
+  }
+}
+.filters {
+  form {
+    padding: 0 5px;
+    fieldset {
+      margin-bottom: 50px;
+    }
+    #slider-range {
+      height: 8px;
+      background-color: #d3d4d8;
+      border-radius: 4px;
+      margin: 5px -5px;
+      .ui-slider-range {
+        background: @brand-danger;
+      }
+      .ui-slider-handle {
+        cursor: pointer;
+        outline: none;
+        width: 14px;
+        height: 14px;
+        background: @brand-danger;
+        border-radius: 7px;
+        top: -3px;
+        span {
+          position: absolute;
+          top: 17px;
+        }
+      }
+    }
+    label {
+      cursor: pointer;
+      font-size: @font-size-base;
+      color: @brand-primary;
+      line-height: 24px;
+    }
+  }
+}
+
+.category-list {
+  .category-list-item {
+    &:nth-child(4n+1) {
+      clear: left;
+    }
+    text-align: center;
+    margin-top: 22px;
+    margin-bottom: 12px;
+    img {
+      .img-responsive;
+      border: 1px solid #d3d4d8;
+      margin-bottom: 18px;
+    }
+    h3 {
+      font-size: 16px;
+      font-family: @heavy-font-family;
+      margin-bottom: 0;
+    }
   }
 }
