--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -110,7 +110,7 @@ em, i {
   border-bottom: 2px solid #d3d4d8;
   position: relative;
   &::before {
-    content: '—';
+    content: '\2014';
     position: absolute;
     left: 0;
   }
