--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -7,28 +7,9 @@
 @import "./fonts/Lato/latofonts.css";
 @import "./bootstrap/less/bootstrap.less";
 
-/* dev */
 /*html {
   height: 100%;
 }*/
-body {
-  //height: 100%;
-  position: relative;
-  &::_after {
-    content: "";
-    background: url('@{img-path}design.jpg') no-repeat; // fixed;
-    background-size: auto;
-    background-position-x: center;
-    background-position-y: 0;
-    opacity: .4;
-    top: 0px;
-    left: 0px;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-  }
-}
 * {
   transition: all 0.2s ease-in-out 0s;
 }
@@ -441,9 +422,16 @@ header {
       }
     }
   }
+  &.fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9900;
+  }
 }
 
 main {
+  transition: initial;
   .container-fluid;
     /*margin-bottom: 30px;*/
   .breadcrumb {
@@ -707,6 +695,11 @@ a.icon {
       transition: initial;
       > li {
         position: relative;
+        &:hover > a {
+          background-color: @brand-primary;
+          color: white;
+          padding-left: 16px;
+        }
         &.with-extended:hover {
           > .extended-menu {
             display: flex;
@@ -738,12 +731,7 @@ a.icon {
         > a {
           display: block;
           padding: 6px;
-          &:hover {
-            text-decoration: none;
-            background-color: @brand-primary;
-            color: white;
-            padding-left: 16px;
-          }
+          text-decoration: none;
         }
       }
     }
@@ -801,6 +789,9 @@ a.icon {
           .discount {
             top: -10px;
             right: -10px;
+          }
+          a:hover img {
+            opacity: .8;
           }
         }
         h3 {
@@ -985,7 +976,7 @@ section.login {
       .text-muted;
       margin-bottom: 30px;
     }
-    button {
+    a.btn {
       width: auto;
     }
   }
@@ -1238,13 +1229,18 @@ section.login {
   }
 }
 .rating {
-  padding: 0 10px;
+  padding: 0 10px; 
+  display: inline-block;
   span {
     .glyphicon; .glyphicon-star;
+    font-size: @font-size-base;
     width: 0.9em;
     color: #d3d4d8;
-    &.selected {
+    &.selected, &.checked {
       color: #ffc000;
     }
+  }
+  label {
+    cursor: pointer;
   }
 }
